  generate temporary AWS credentials. A bit like sudo, these are cached
  so each action doesn't require a new MFA token.

- Add a ``pre_restore`` and ``post_restore`` hook to database rollbacks. This
  allows customizations to be run after initial validation but before the
  restore starts. This is great for adding application specific policy like
  emptying an ASG before the rollback.


0.0.15 (2015-06-03)
-------------------

- asg: If an ASG is connected to an ELB, consider the ELB health when
  scaling/descaling during a deployment.

- Add slack notification support.

- Add basic price estimation.


0.0.14 (2015-05-28)
-------------------

- Add support for AWS CloudWatch Logs. In this initial release you can
  pre-create your log groups and manage the log retention period::

      aws.add_log_group(
          name="application.log",
          retention=3,
      )

- Add a new tail command. This can grab events from any touchdown managed
  CloudWatch log group. For the example above you could get the last 15m of
  logs with::

      touchdown tail application.log -s 15m

  And stream all new logs to that group with::

      touchdown tail application.log -f

- Add a new rollback command. This can restore a snapshot or restore to a point
  in time for any RDS database. For example to rewind your database ``foo`` to
  an hour ago you could::

      touchdown rollback foo 1h

- Both of these commands are written to be pluggable. For example in future you
  might be able to use the same ``tail`` command against a heroku app.

- Touchdown no longer depends on click.


0.0.13 (2015-05-22)
-------------------

- Avoid a case where SSHing into an ASG can actually log into a random instance
  in the cluster. It looks like ``DescribeInstances(InstanceIds=[])`` is
  interpreted as 'any instance'.

- Make sure when bringing up an ASG for the first time it's metadata is updated
  after at least one instance becomes healthy. This avoids cases where the ASG